--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -51,4 +51,5 @@ jobs:
       uses: coverallsapp/github-action@v2.0.0
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ./Xyaneon.Bioinformatics.FASTA.Test/TestResults/coverage.info
+        file: ./Xyaneon.Bioinformatics.FASTA.Test/TestResults/coverage.info
+        format: lcov
